# backup-app

./: .gitignore  代码运行指南.md  实验要求.md  筛选功能测试说明.md  需求说明文档.md  项目架构文档.md
backup-app/: .gitignore  CMakeLists.txt  README.md  测试文件.md  项目详细说明.md
backup-app/scripts/: build.sh
backup-app/src/: CMakeLists.txt  main.cpp
backup-app/src/common/: file_utils.cpp  file_utils.h  filter_engine.cpp  filter_engine.h  logger.cpp  logger.h  types.h
backup-app/src/core/: backup_archive.cpp  backup_archive.h  backup_engine.cpp  backup_engine.h  backup_manifest.cpp  backup_manifest.h  config_manager.cpp  config_manager.h  restore_engine.cpp  restore_engine.h
backup-app/src/services/: file_scanner.cpp  file_scanner.h  metadata_handler.cpp  metadata_handler.h
backup-app/src/ui/: main_window.cpp  main_window.h
backup-app/src/ui/backup/: backup_panel.cpp  backup_panel.h  filter_dialog.cpp  filter_dialog.h
backup-app/src/ui/restore/: restore_panel.cpp  restore_panel.h
backup-app/test/: generate_test_files.sh  setup_special.sh  verify_metadata.sh
backup-app/test/test_backup_source/: config.ini  readme.txt
backup-app/test/test_backup_source/deep/a/b/c/: deep_file.txt
backup-app/test/test_backup_source/subdir/: notes.txt
